--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@hot-loader/react-dom": "^16.11.0",
     "axios": "^0.19.2",
+    "hamburgers": "^1.1.3",
     "history": "^4.10.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
