--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@hot-loader/react-dom": "^16.11.0",
+    "antd": "^4.15.1",
     "axios": "^0.19.2",
     "hamburgers": "^1.1.3",
     "history": "^4.10.1",
