--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@hot-loader/react-dom": "^16.11.0",
     "antd": "^4.15.1",
     "axios": "^0.19.2",
+    "formik": "^2.2.6",
     "hamburgers": "^1.1.3",
     "history": "^4.10.1",
     "react": "^16.13.1",
@@ -16,7 +17,8 @@
     "react-icons": "^3.8.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
