--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-helmet": "^6.0.0",
     "react-hot-loader": "^4.12.18",
     "react-icons": "^3.8.0",
+    "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.0",
